subnet.tf
resource "aws_subnet" "dp_public_subnet_1" {
  vpc_id            = aws_vpc.dp_vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "dp-public-subnet-1"
  }
}
resource "aws_subnet" "dp_public_subnet_2" {
  vpc_id            = aws_vpc.dp_vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "dp-public-subnet-2"
  }
}
